fixed issue with thumb overlapping hamburger menu

--- a/css/main.css
+++ b/css/main.css
@@ -626,6 +626,7 @@ body{
     }
 
     .Stickyhamburger{
+      z-index: 2;
       display: none;
       padding-top: 8px;
       padding-left: 15px;
@@ -734,6 +735,7 @@ body{
     cursor: pointer;
     transition: opacity 0.2s ease-in;
     transition:  transform 0.2s ease-in;
+    z-index: 1;
   }
 
 
